2003-03-29 19:13  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/blit.h, Source/art/blit.m,
	Source/art/ftfont.h, Source/art/ftfont.m: Implement rendering of
	text to buffers with destination alpha. Change the subpixel
	font rendering to override the glyph operator since it's the one
	actually being used.

2003-03-25  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/GSXftFontInfo.m: Protect 'id' when including
	fontconfig/fontconfig.h (suggestion from Pete French).

2003-03-26 00:24  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XWindowBuffer.m (-dealloc): Free the shared memory
	pixmap (if one was allocated).

	* Source/art/composite.m: When checking whether the overlap handling
	should be used, compare windows, not gstates.

2003-03-22  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/x11/XGServerWindow.m ([XGServer -orderwindow:::]): 
	Use XWithDrawWindow instead of XUnmapWindow as suggested by
	Xlib programming manuals.

2003-03-03 20:05  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Remap glyph numbers from freetype so
	NSNullGlyph is never used.

2003-03-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	In [setupAttributes] moved the call to open the XFT font further
	to the back as Derek Zhou claims that this takes over the
	ownership of the pattern, which then results in strange behaviour.
	
2003-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* configure.ac
	Check for FreeType 2 fontconfig.
	* configure
	* config.h.in
	Regenerated
	* Header/xlib/GSXftFontInfo.h
	Define font enumerator for fontconfig.	
	* Source/xlib/XGContext.m
	Use new enumerator in anti-alias mode if available.
	* Source/xlib/GSXftFontInfo.m
	Added fontconfig specific code.
	Patch from Derek Zhou dzhou@chrontel.com with some adaption
	
2003-03-24  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.5

2003-03-11  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Only add libgdi32 for winlib
