@@ -35,6 +35,9 @@
 #include "ftfont.h"
 
 
+#include <libart_lgpl/libart.h>
+
+
 #ifndef PI
 #define PI 3.14159265358979323846264338327950288
 #endif
